# 20240224
- Modified Continuous AutoKick module to do the oneshot kick.
- Check whether the message comes from bot account